; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_storage.c_log_smgrcreate.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_storage.c_log_smgrcreate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@RM_SMGR_ID = common dso_local global i32 0, align 4
@XLOG_SMGR_CREATE = common dso_local global i32 0, align 4
@XLR_SPECIAL_REL_UPDATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_smgrcreate(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %6, align 4
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* %4, align 4
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = call i32 (...) @XLogBeginInsert()
  %12 = bitcast %struct.TYPE_2__* %5 to i8*
  %13 = call i32 @XLogRegisterData(i8* %12, i32 8)
  %14 = load i32, i32* @RM_SMGR_ID, align 4
  %15 = load i32, i32* @XLOG_SMGR_CREATE, align 4
  %16 = load i32, i32* @XLR_SPECIAL_REL_UPDATE, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @XLogInsert(i32 %14, i32 %17)
  ret void
}

declare dso_local i32 @XLogBeginInsert(...) #1

declare dso_local i32 @XLogRegisterData(i8*, i32) #1

declare dso_local i32 @XLogInsert(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
